2026-02-23T01:07:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22289432436 # 886
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-23
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 697 1091 / 699 1093
* notice: next accum: outdated-unq outdated-all / unq all: 699 1093 / 702 1096
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-20 2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28 2026-01-29 2026-01-30] / []

2026-02-22T01:07:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22267783142 # 885
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-22
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 697 1091 / 702 1096
* notice: next accum: outdated-unq outdated-all / unq all: 697 1091 / 699 1093
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-21T01:03:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22247198446 # 884
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-21
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 697 1091 / 700 1094
* notice: next accum: outdated-unq outdated-all / unq all: 697 1091 / 702 1096
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-19T01:09:06Z: