@@ -1,3 +1,12 @@
+2026-02-24T01:05:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22332063438 # 887
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-24
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 699 1093 / 702 1096
+* notice: next accum: outdated-unq outdated-all / unq all: 701 1095 / 702 1096
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-31 2026-02-01 2026-02-02 2026-02-03 2026-02-04 2026-02-05 2026-02-06 2026-02-07 2026-02-08] / []
+
 2026-02-23T01:07:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22289432436 # 886
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-23
